--- a/src/components/ImageModal/ImageModal.module.css
+++ b/src/components/ImageModal/ImageModal.module.css
@@ -21,6 +21,7 @@
     justify-content: center;
     align-items: center;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: var(--background-color-modal);
   }
   
   .closeButton {
